<resources>
    <string name="app_name">FOODIES EDITOR</string>
    <string name="please_enter_the_below_fields">PLEASE ENTER THE BELOW FIELDS</string>
    <string name="dish_name">DISH NAME</string>
    <string name="enter_dish">Enter Dish</string>
    <string name="cost">COST</string>
    <string name="enter_cost">Enter Cost</string>
    <string name="location">LOCATION</string>
    <string name="enter_location">Enter Location</string>
    <string name="view_maps">View Maps</string>
    <string name="rating">RATING</string>
    <string name="enter_rating">Enter Rating</string>
    <string name="review">REVIEW</string>
    <string name="enter_hint">Enter Hint</string>
    <string name="view_location_in_maps">View Location In Maps</string>
    <string name="enter_review">Enter Review</string>
    <string name="next">NEXT</string>
    <string name="enter_tag_of_resturant">Enter tag of resturant</string>
    <string name="find_location">Find Location</string>
    <string name="copy">COPY</string>
    <string name="textview">TextView</string>
    <string name="open_instagram">Open Instagram</string>
</resources>
