<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/foodies"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/please_enter_the_below_fields" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:fontFamily="casual"
        android:text="@string/dish_name" />

    <EditText
        android:id="@+id/et3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:ems="10"
        android:hint="@string/enter_dish"
        android:inputType="textPersonName"
        android:padding="7dp" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:padding="7dp"
        android:text="@string/cost" />

    <EditText
        android:id="@+id/et4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:ems="10"
        android:hint="@string/enter_cost"
        android:inputType="textPersonName"
        android:padding="7dp" />

    <TextView
        android:id="@+id/tv5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:fontFamily="casual"
        android:text="@string/location" />

    <EditText
        android:id="@+id/et6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:ems="10"
        android:hint="@string/enter_location"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <Button
        android:id="@+id/bt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:text="@string/find_location" />

    <TextView
        android:id="@+id/tv6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:fontFamily="casual"
        android:text="@string/rating" />

    <EditText
        android:id="@+id/et7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:ems="10"
        android:hint="@string/enter_rating"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <TextView
        android:id="@+id/tv7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:fontFamily="casual"
        android:text="@string/review" />

    <EditText
        android:id="@+id/et8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:ems="10"
        android:hint="@string/enter_review"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/et9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:ems="10"
        android:hint="@string/enter_tag_of_resturant"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <Button
        android:id="@+id/bt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:text="@string/next" />

</LinearLayout>

</ScrollView>